--- a/style/styleWall.css
+++ b/style/styleWall.css
@@ -65,19 +65,36 @@
         margin-top: 4%;
     }
     .aMuro{
-        text-align: center;
+        display:block;
+        text-align: left;
     }
     .imgMuro{
         height: 25px;
         width: 25px;
     }
     .imgMuroBorrar{
+      /* display:block; */
+      padding-left: 155px;
+      padding-right: 25px;
         height: 25px;
         width: 25px;
     }
+
+    .imgMuroBorrar2{
+      /* display:inline-block; */
+      padding-left: 20px;
+      /* padding-right: 25px; */
+        height: 25px;
+        width: 25px;
+    }
+
+
     .imgEdit{
+       /* display:inline; */
         width: 25px;
         height: 25px;
+        /* padding-left: 20px;
+        padding-right: 25px; */
     }
     .divHeaderMuro{
         background-color: #FFFFFF;
@@ -237,6 +254,15 @@
         height: 30px;
         width: 30px;
     }
+
+    .imgMuroBorrar2{
+      /* display:inline-block; */
+      padding-left: 20px;
+      /* padding-right: 25px; */
+        height: 25px;
+        width: 25px;
+    }
+
     .imgEdit{
         width: 20px;
         height: 20px;
@@ -402,6 +428,14 @@
     .imgMuroBorrar{
         height: 40px;
         width: 40px;
+    }
+
+    .imgMuroBorrar2{
+      /* display:inline-block; */
+      padding-left: 20px;
+      /* padding-right: 25px; */
+        height: 25px;
+        width: 25px;
     }
     .imgEdit{
         width: 30px;
