--- a/style/styleWall.css
+++ b/style/styleWall.css
@@ -245,6 +245,7 @@
     }
     .aMuro{
         text-align: center;
+        font-weight: bolder;
     }
     .imgMuro{
         height: 20px;
@@ -350,6 +351,8 @@
                 width: 20px;
             }
 }
+
+
 /*responsive tablet o superior*/
 @media screen and (min-width: 721px){
     .divPerfilAjustWall{
@@ -524,6 +527,9 @@
                   width: 20px;
               }
       }
+
+/*
+FORMATO GENERAL SIN RESPONSIVE       */
 /*fondo de pantallas*/
  .bodyImg{
      background-image: url("../imagenes/found1.png");
